--- a/app/scss/_services.scss
+++ b/app/scss/_services.scss
@@ -27,7 +27,7 @@
         margin: 0 auto 4rem;
         background-color: #f9f9f9;
         transition: all .3s;
-        height: 930px;
+        height: auto;
         position: relative;
 
         &:hover {
@@ -52,7 +52,6 @@
 
         .insideCard {
             padding-bottom: 2rem;
-            
 
             .description {
                 
@@ -92,17 +91,18 @@
             .buttonWrapper {
                 text-align: center;
                 position: absolute;
-                height: 80px;
+                height: 15.625rem;
                 width: 100%;
                 bottom: 0;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 
+                
                 .button {
                     width: 60%;
                     min-width: 200px;
-                    margin: 0 auto;
+                    margin: 11.875rem auto 0;
                 }
             }
         }  
@@ -119,6 +119,7 @@
         .card {
             max-width: 90%;
             margin: 0 auto;
+            height: 930px;
         }
     }    
 }
